src/core/Claroline/PluginBundle/Tests/stub/plugin/Invalid/UnexpectedBundleClassType_1/InvalidUnexpectedBundleClassType_1.php
<?php

namespace Invalid\UnexpectedBundleClassType_1;

/*
 * The class doesn't extend ClarolinePlugin
 */
class InvalidUnexpectedBundleClassType_1
{

}